--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -3,9 +3,16 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: stretch;
     min-width: 282px;
     min-height: 100vh;
-    max-width: calc(100% - 19px * 2);
+    max-width: 100%;
     width: 1280px;
     scroll-behavior: smooth;
+}
+
+@media screen and (max-width: 425px) {
+    .page__container {
+        max-width: 100%;
+    }
 }
