--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,9 +1,14 @@
 .footer {
-    padding: 79px 70px 20px 70px;
-    box-sizing: border-box;
     width: 100%;
     background-color: var(--gray-light-color-footer);
 }
+
+.footer__container {
+    width: 100%;
+    padding: 79px 70px 20px 70px;
+    box-sizing: border-box;
+}
+
 
 .footer__desc {
     margin: 0 auto;
@@ -18,6 +23,7 @@
 }
 
 .footer__bottom {
+    width: 100%;
     margin: 0;
     display: flex;
     flex-direction: row;
@@ -51,13 +57,22 @@
     margin-right: 0;
 }
 
-@media screen and (max-width: 768px) {
-    .footer {
-        background-color: var(--gray-page);
+@media screen and (max-width: 769px) {
+    .footer__container {
+        padding: 79px 30px 20px 30px;
     }
 }
 
 @media screen and (max-width: 425px) {
+    .footer {
+        width: 100%;
+        background-color: white;
+    }
+
+    .footer__container {
+        padding: 79px 14px 10px 14px;
+    }
+
     .footer__bottom {
         text-align: center;
         flex-direction: column-reverse;
