--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,11 +1,13 @@
 header {
-    width: calc(90% + 19px * 2);
+    width: 100%;
     min-height: 74px;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
     box-sizing: border-box;
+    padding-right: 70px;
+    padding-left: 70px;
 }
 
 .logo {
@@ -18,4 +20,18 @@ header {
 
 .header__logo:focus, .header__logo:hover {
     opacity: 50%;
+}
+
+@media screen and (max-width: 769px) {
+    header {
+        padding-right: 30px;
+        padding-left: 30px;
+    }
+}
+
+@media screen and (max-width: 425px) {
+    header {
+        padding-right: 14px;
+        padding-left: 14px;
+    }
 }
