--- a/src/components/Main/Techs/Techs.css
+++ b/src/components/Main/Techs/Techs.css
@@ -1,6 +1,8 @@
 .techs {
     padding: 100px 70px;
+    box-sizing: border-box;
     background: var(--gray-color);
+    width: 100%;
 }
 
 .techs__head {
@@ -33,14 +35,14 @@
 
 @media screen and (max-width: 850px) {
     .techs {
-        padding: 90px 30px;
+        padding: 90px 50px;
     }
 }
 
 @media screen and (max-width: 425px) {
     .techs {
-        padding: 70px 9px;
-        background: var( --page-color);
+        padding: 70px 18px;
+        background: white;
     }
     .techs__head_h3 {
         font-size: 30px;
