--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -1,14 +1,9 @@
 .movies-card-list {
-    padding: 70px 0 10px 0;
+    padding: 70px 70px 10px 70px;
+    box-sizing: border-box;
     display: grid;
     grid-template-columns: 1fr;
     grid-row-gap: 40px;
-    width: 100%;
-}
-
-.movies-card-list__container {
-    padding: 50px 0 80px 0;
-    box-sizing: border-box;
     width: 100%;
 }
 
@@ -35,8 +30,15 @@
     outline: none;
 }
 
+@media screen and (max-width: 769px) {
+    .movies-card-list {
+        padding: 70px 40px 30px 40px;
+    }
+}
+
 @media screen and (max-width: 650px) {
     .movies-card-list {
+        padding: 40px 10px 20px 10px; 
         grid-template-columns: 1fr;
         grid-row-gap: 20px;
     }
@@ -44,7 +46,9 @@
         margin: 50px auto 0;
     }
 }
-@media screen and (max-width: 625px) {
+
+@media screen and (max-width: 425px) {
+    
     .movies-card-list__btn {
         margin: 50px auto 0;
         width: 100%;
