--- a/src/components/Main/NavTab/NavTab.css
+++ b/src/components/Main/NavTab/NavTab.css
@@ -5,7 +5,7 @@
     flex-wrap: wrap;
 }
 
-.navTab_item {
+.navTab-item {
     padding: 10px 17px;
     margin-right: 10px;
     color: var(--black-color);
@@ -22,30 +22,30 @@
     margin-right: 0;
 }
 
-.navTab_item:hover, .navTab_item:focus, .navTab_item:active {
+.navTab-item:hover, .navTab_item:focus, .navTab_item:active {
     opacity: 0.5;
 }
 
-.navTab_item#l {
+.navTab-item#l {
     padding: 21px 26px;
     margin-bottom: 10px;
 }
 
 @media screen and (max-width: 425px) {
-    .techs__table {
+    .techs-table {
         margin: 0 auto 10px;
         width: 192px;
         justify-content: flex-start;
     }
 
-    .navTab_item {
+    .navTab-item {
         font-size: 10px;
         line-height: 16px;
         margin-bottom: 10px;
         padding: 5px 15px;
     }
 
-    .navTab_item#l {
+    .navTab-item#l {
         padding: 0;
         padding-top: 21px;
         text-align: center;
