--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,4 +1,4 @@
-.page__container {
+.page {
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -12,7 +12,7 @@
 }
 
 @media screen and (max-width: 425px) {
-    .page__container {
+    .page {
         max-width: 100%;
     }
 }
