--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -40,14 +40,13 @@
 }
 
 .preloader {
-    margin: auto;
+    margin: 20px auto;
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
     height: 100%;
     z-index: 10;
-    padding: 20px;
 }
 
 .preloader__container {
