--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -18,14 +18,14 @@
     overflow: hidden;
     display: flex;
     margin: 6px 6px 6px 0;
-    max-width: 220px;
+    width: 220px;
     max-height: 122px;
     border-radius: 0;
 }
 
 .movies-card__item_img {
     margin: 6px 6px 6px 0;
-    max-width: 220px;
+    width: 220px;
     max-height: 122px;
     object-fit: cover;
     object-position: center;
@@ -138,7 +138,7 @@
 
     .movies-card__item {
         margin: 0;
-        max-width: 100%;
+        width: 100%;
         max-height: 240px;
         min-height: 240px;
         display: flex;
