--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -19,7 +19,7 @@
     color: #8B8B8B;
 
     padding-bottom: 20px;
-    border-bottom: #424242 1px solid;
+    border-bottom: #E8E8E8 1px solid;
 }
 
 .footer__bottom {
