--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,6 @@
 header {
     width: 100%;
-    min-height: 74px;
+    height: 74px;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
@@ -8,6 +8,16 @@ header {
     box-sizing: border-box;
     padding-right: 70px;
     padding-left: 70px;
+}
+
+.header__container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  box-sizing: border-box;
 }
 
 .logo {
