--- a/src/components/InfoTooltip/InfoTooltip.css
+++ b/src/components/InfoTooltip/InfoTooltip.css
@@ -2,12 +2,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(0 0 0 0.5);
+    background-color: rgba(0, 0, 0, 0.5);
     visibility: hidden;
     opacity: 0;
     transition: .7s;
     transition-property: visibility, opacity;
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     right: 0;
@@ -20,6 +20,24 @@
     opacity: 1;
 }
 
+.popup__button-close {
+  background-image: url(../../images/icon__cross.svg);
+  background-color: rgba(0, 0, 0, 0);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  position: absolute;
+  top: -31px;
+  right: -31px;
+  width: 31px;
+  height: 31px;
+  border: none;
+  padding: 0;
+  outline: none;
+  transform: rotate(-360deg);
+  transition: all .5s;
+}
+
 .popup_type_show-card {
     background-color: rgba(0 0 0 0.9);
 }
@@ -30,6 +48,10 @@
 
 .popup__container {
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     max-width: 280px;
     padding: 25px 15px;
     background-color: white;
@@ -89,7 +111,7 @@
     }
 }
 
-.popup__image {
+.popup__status {
     display: block;
     max-width: 75vw;
     max-height: 75vh;
@@ -102,7 +124,7 @@
     margin: 25px auto 32px;
 }
 
-.popup__heading {
+.popup__status-title {
     margin: 0 0 70px;
     font-weight: 900;
     font-size: 20px;
