--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,93 +1,152 @@
 .profile {
-    margin: 80px 70px;
-    width: calc(90% + 19px * 2);
-    display: flex;
-    flex-direction: column;
+  width: 396px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: var(--page-color);
+  padding: 74px 0 70px;
 }
 
-.profile__head {
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 29px;
-    text-align: center;
+.profile__container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 220px;
+}
+
+.profile__title {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 29px;
+  margin: 0 0 123px;
 }
 
 .profile__info {
-    margin: 123px auto 0;
-    display: flex;
-    flex-direction: column;
-    width: 410px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid var(--gray-color-more-dark);
+  padding: 16px 0;
 }
 
-.profile__info_item {
-    display: flex;
-    justify-content: space-between;
+.profile__info_active {
+  border-bottom: 1px solid var(--green-color);
 }
 
-.profile__info_item:first-child {
-    padding-bottom: 17px;
-    margin-bottom: 17px;
-    border-bottom: 1px solid #424242;
+.profile__info:nth-child(3) {
+  border-bottom: none;
 }
 
-.profile__info_item_head {
-    margin: 0;
-    font-weight: 500;
-    font-size: 11px;
-    line-height: 13px;
+.profile__key {
+  font-weight: 500;
+  font-size: 11px;
+  line-height: 13px;
 }
 
-.profile__info_item_desc {
-    margin: 0;
-    font-weight: normal;
-    font-size: 11px;
-    line-height: 13px;
-    outline: none;
-    border: none;
-    text-align: right;
+.profile__value {
+  font-weight: normal;
+  font-size: 11px;
+  line-height: 13px;
+  background: none;
+  border: none;
+  text-align: right;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  color: rgb(0, 0, 0);
 }
 
-.profile__setup {
-    margin: 220px auto 0;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
+.profile__value:focus {
+  outline-style: inset;
+  outline-color: var(--green-color);
+  outline-width: 1px;
+  caret-color: var(--green-color);
 }
 
-.profile__setup_edit {
-    margin: 0;
-    text-decoration: none;
-    color: var(--green-color);
-    font-weight: normal;
-    font-size: 13px;
-    line-height: 16px;
-    transition: linear 300ms;
-    outline: none;
-    border: none;
-    background: none;
-    cursor: pointer;
+.profile__menu {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
-
-.profile__setup_out {
-    margin-top: 16px;
-    font-weight: 500;
-    font-size: 13px;
-    line-height: 16px;
-    color: #EE3465;
-    text-decoration: none;
-    transition: linear 300ms;
-    outline: none;
-    border: none;
-    background: none;
-    cursor: pointer;
+.profile__menu-item {
+  margin-bottom: 16px;
 }
 
-@media screen and (max-width: 450px) {
-    .profile {
-        margin: 70px 30px;
-    }
-    .profile__info {
-        width: 100%;
-    }
+.profile__menu-item:last-child {
+  margin-bottom: 0;
 }
+
+.profile__button {
+  background: none;
+  border: none;
+  outline: none;
+  color: rgb(0, 0, 0);
+  font-weight: normal;
+  font-size: 13px;
+  line-height: 16px;
+  cursor: pointer;
+  padding: 0;
+}
+
+.profile__button:hover {
+  opacity: .7;
+  transition: opacity .2s ease;
+}
+
+.profile__button_logout {
+  color: #ee3465;
+  font-weight: 500;
+}
+
+.profile__error {
+  max-width: 100%;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 15px;
+  color: #ff0000;
+  text-align: right;
+}
+
+.profile__placeholder {
+  font-weight: normal;
+  font-size: 11px;
+  line-height: 13px;
+  color: var(--black-color);
+  text-align: right;
+  margin: 0;
+}
+
+@media all and (max-width: 800px) {
+  .profile {
+    padding: 236px 0 269px;
+  }
+
+  .profile__title {
+    margin: 0 0 96px;
+  }
+}
+
+@media all and (max-width: 700px) {
+  .profile {
+    padding: 70px 0 40px;
+  }
+
+  .profile {
+    width: 81.25%;
+  }
+
+  .profile__title {
+    margin-bottom: 80px;
+  }
+
+  .profile__button {
+    font-size: 12px;
+    line-height: 15px;
+  }
+
+}
+
