--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -5,149 +5,30 @@
     width: 396px;
 }
 
-.register__head {
-    margin: 40px 0;
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 29px;
+@media screen and (max-width: 800px) {
+  .register {
+      margin: 56px auto;
+      width: 90%;
+  }
+  .register__logo {
+      margin-right: 0;
+      align-self: center;
+  }
+  .register__head {
+      text-align: center;
+  }
+  .register__in {
+      font-size: 12px;
+      line-height: 15px;
+  }
 }
 
-.register__form {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    padding-bottom: 65px;
-    box-sizing: border-box;
-}
-
-.register__form_label {
-    margin: 0 0 5px 0;
-    font-weight: normal;
-    font-size: 10px;
-    line-height: 12px;
-    color: #8B8B8B;
-}
-
-.register__form_input {
-    margin: 0px 0 25px 0;
-    padding-bottom: 10px;
-    box-sizing: border-box;
-    border-top: none;
-    border-left: none;
-    border-right: none;
-    border-bottom: solid 1px #E8E8E8;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 17px;
-    color: var(--black-color);
-    transition: linear 200ms;
-    outline: none;
-    width: 100%;
-}
-
-.register__form_input:last-of-type {
-    margin: 0 0 6px 0;
-}
-
-.register__form_input:hover, .register__form_input:focus, .register__form_input:active {
-    outline: none;
-    border-top: none;
-    border-left: none;
-    border-right: none;
-    border-bottom: solid 1px var(--green-color);
-}
-
-.error {
-    color: #EE3465;
-}
-
-.register__form_span {
-    font-weight: normal;
-    font-size: 10px;
-    line-height: 12px;
-    position: absolute;
-    left: 0;
-    bottom: -15px;
-    color: #EE3465;
-}
-
-.register_btn {
-    margin: 134px 0 16px 0;
-    height: 45px;
-    width: 100%;
-    background: var(--green-color);
-    border-radius: 3px;
-    border: none;
-    color: var(--white-color);
-    cursor: pointer;
-    transition: linear 200ms;
-    opacity: 0.5;
-}
-
-.register_btn-disabled {
-    background: #ececec;
-    cursor: auto;
-}
-.register_btn-disabled:hover, .register_btn-disabled:focus, .register_btn-disabled:active {
-  opacity: .5;
-  outline: none;
-}
-
-.register_btn:hover, .register_btn:focus, .register_btn:active {
-    opacity: .8;
-    outline: none;
-}
-
-.register__in {
-    margin: auto;
-    display: flex;
-    flex-direction: row;
-    text-align: center;
-    font-size: 14px;
-    line-height: 17px;
-}
-
-.register__in p {
-    margin: 0;
-    font-weight: normal;
-    font-size: inherit;
-    line-height: inherit;
-    color: #8B8B8B;
-}
-
-.register__in a {
-    margin: 0 0 0 6px;
-    text-decoration: none;
-    color: var(--green-color);
-    font-weight: normal;
-    font-size: inherit;
-    line-height: inherit;
-    transition: linear 300ms;
-}
-
-.register__in a:hover, .register__in a:focus, .register__in a:active {
-    opacity: .5;
-    outline: none;
-}
-
-.register__input-container {
-    position: relative;
-}
-
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 600px) {
     .register {
         margin: 56px auto;
-        width: 90%;
+        width: 100%;
+        padding-left: 30px;
+        padding-right: 30px;
     }
-    .register__logo {
-        margin-right: 0;
-        align-self: center;
-    }
-    .register__head {
-        text-align: center;
-    }
-    .register__in {
-        font-size: 12px;
-        line-height: 15px;
-    }
+
 }
