--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -23,7 +23,7 @@
   line-height: 17px;
   color: #3ddc84;
   padding: 5px 0 10px;
-  border-bottom: 1px solid #424242;
+  border-bottom: 1px solid #E8E8E8;
 }
 
 .form__input:focus {
