--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -146,11 +146,9 @@
     }
 
     .card__image {
-        min-width: 100%;
-        max-height: 100%;
+        width: 100%;
+        height: 100%;
         margin: 0;
-        max-width: 100%;
-        justify-self: stretch;
     }
 
     .card__container {
