--- a/src/components/UserMenu/UserMenu.css
+++ b/src/components/UserMenu/UserMenu.css
@@ -14,6 +14,7 @@
   font-weight: normal;
   font-size: 12px;
   line-height: 16px;
+  box-sizing: border-box;
 }
 
 .user__menu-item_login {
@@ -21,8 +22,7 @@
 }
 
 .user__link {
-  width: 30px;
-  height: 30px;
+  text-decoration: none;
 }
 
 .user__link_login {
